// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoanMetadata component renders data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoanMetadata
    data={
      Object {
        "metadata": Object {
          "author": "author",
          "title": "title",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Header
          as="h1"
        >
          Loan Information
        </Header>,
        <Table
          as="table"
          celled={true}
          compact={true}
          definition={true}
          textAlign="center"
        >
          <TableHeader
            as="thead"
            fullWidth={true}
          >
            <TableRow
              as="tr"
              cellAs="td"
            >
              <TableHeaderCell
                as="th"
              >
                Property
              </TableHeaderCell>
              <TableHeaderCell
                as="th"
              >
                Value
              </TableHeaderCell>
            </TableRow>
          </TableHeader>
          <TableBody
            as="tbody"
          >
            <TableRow
              as="tr"
              cellAs="td"
            >
              <TableCell
                as="td"
                collapsing={true}
              >
                title
              </TableCell>
              <TableCell
                as="td"
              >
                title
              </TableCell>
            </TableRow>
            <TableRow
              as="tr"
              cellAs="td"
            >
              <TableCell
                as="td"
                collapsing={true}
              >
                author
              </TableCell>
              <TableCell
                as="td"
              >
                author
              </TableCell>
            </TableRow>
          </TableBody>
        </Table>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "as": "h1",
          "children": "Loan Information",
        },
        "ref": null,
        "rendered": "Loan Information",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "as": "table",
          "celled": true,
          "children": Array [
            <TableHeader
              as="thead"
              fullWidth={true}
            >
              <TableRow
                as="tr"
                cellAs="td"
              >
                <TableHeaderCell
                  as="th"
                >
                  Property
                </TableHeaderCell>
                <TableHeaderCell
                  as="th"
                >
                  Value
                </TableHeaderCell>
              </TableRow>
            </TableHeader>,
            <TableBody
              as="tbody"
            >
              <TableRow
                as="tr"
                cellAs="td"
              >
                <TableCell
                  as="td"
                  collapsing={true}
                >
                  title
                </TableCell>
                <TableCell
                  as="td"
                >
                  title
                </TableCell>
              </TableRow>
              <TableRow
                as="tr"
                cellAs="td"
              >
                <TableCell
                  as="td"
                  collapsing={true}
                >
                  author
                </TableCell>
                <TableCell
                  as="td"
                >
                  author
                </TableCell>
              </TableRow>
            </TableBody>,
          ],
          "compact": true,
          "definition": true,
          "textAlign": "center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "as": "thead",
              "children": <TableRow
                as="tr"
                cellAs="td"
              >
                <TableHeaderCell
                  as="th"
                >
                  Property
                </TableHeaderCell>
                <TableHeaderCell
                  as="th"
                >
                  Value
                </TableHeaderCell>
              </TableRow>,
              "fullWidth": true,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "tr",
                "cellAs": "td",
                "children": Array [
                  <TableHeaderCell
                    as="th"
                  >
                    Property
                  </TableHeaderCell>,
                  <TableHeaderCell
                    as="th"
                  >
                    Value
                  </TableHeaderCell>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "as": "th",
                    "children": "Property",
                  },
                  "ref": null,
                  "rendered": "Property",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "as": "th",
                    "children": "Value",
                  },
                  "ref": null,
                  "rendered": "Value",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "as": "tbody",
              "children": Array [
                <TableRow
                  as="tr"
                  cellAs="td"
                >
                  <TableCell
                    as="td"
                    collapsing={true}
                  >
                    title
                  </TableCell>
                  <TableCell
                    as="td"
                  >
                    title
                  </TableCell>
                </TableRow>,
                <TableRow
                  as="tr"
                  cellAs="td"
                >
                  <TableCell
                    as="td"
                    collapsing={true}
                  >
                    author
                  </TableCell>
                  <TableCell
                    as="td"
                  >
                    author
                  </TableCell>
                </TableRow>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "title",
                "nodeType": "function",
                "props": Object {
                  "as": "tr",
                  "cellAs": "td",
                  "children": Array [
                    <TableCell
                      as="td"
                      collapsing={true}
                    >
                      title
                    </TableCell>,
                    <TableCell
                      as="td"
                    >
                      title
                    </TableCell>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "as": "td",
                      "children": "title",
                      "collapsing": true,
                    },
                    "ref": null,
                    "rendered": "title",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "as": "td",
                      "children": "title",
                    },
                    "ref": null,
                    "rendered": "title",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "author",
                "nodeType": "function",
                "props": Object {
                  "as": "tr",
                  "cellAs": "td",
                  "children": Array [
                    <TableCell
                      as="td"
                      collapsing={true}
                    >
                      author
                    </TableCell>,
                    <TableCell
                      as="td"
                    >
                      author
                    </TableCell>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "as": "td",
                      "children": "author",
                      "collapsing": true,
                    },
                    "ref": null,
                    "rendered": "author",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "as": "td",
                      "children": "author",
                    },
                    "ref": null,
                    "rendered": "author",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Header
            as="h1"
          >
            Loan Information
          </Header>,
          <Table
            as="table"
            celled={true}
            compact={true}
            definition={true}
            textAlign="center"
          >
            <TableHeader
              as="thead"
              fullWidth={true}
            >
              <TableRow
                as="tr"
                cellAs="td"
              >
                <TableHeaderCell
                  as="th"
                >
                  Property
                </TableHeaderCell>
                <TableHeaderCell
                  as="th"
                >
                  Value
                </TableHeaderCell>
              </TableRow>
            </TableHeader>
            <TableBody
              as="tbody"
            >
              <TableRow
                as="tr"
                cellAs="td"
              >
                <TableCell
                  as="td"
                  collapsing={true}
                >
                  title
                </TableCell>
                <TableCell
                  as="td"
                >
                  title
                </TableCell>
              </TableRow>
              <TableRow
                as="tr"
                cellAs="td"
              >
                <TableCell
                  as="td"
                  collapsing={true}
                >
                  author
                </TableCell>
                <TableCell
                  as="td"
                >
                  author
                </TableCell>
              </TableRow>
            </TableBody>
          </Table>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "as": "h1",
            "children": "Loan Information",
          },
          "ref": null,
          "rendered": "Loan Information",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "as": "table",
            "celled": true,
            "children": Array [
              <TableHeader
                as="thead"
                fullWidth={true}
              >
                <TableRow
                  as="tr"
                  cellAs="td"
                >
                  <TableHeaderCell
                    as="th"
                  >
                    Property
                  </TableHeaderCell>
                  <TableHeaderCell
                    as="th"
                  >
                    Value
                  </TableHeaderCell>
                </TableRow>
              </TableHeader>,
              <TableBody
                as="tbody"
              >
                <TableRow
                  as="tr"
                  cellAs="td"
                >
                  <TableCell
                    as="td"
                    collapsing={true}
                  >
                    title
                  </TableCell>
                  <TableCell
                    as="td"
                  >
                    title
                  </TableCell>
                </TableRow>
                <TableRow
                  as="tr"
                  cellAs="td"
                >
                  <TableCell
                    as="td"
                    collapsing={true}
                  >
                    author
                  </TableCell>
                  <TableCell
                    as="td"
                  >
                    author
                  </TableCell>
                </TableRow>
              </TableBody>,
            ],
            "compact": true,
            "definition": true,
            "textAlign": "center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "thead",
                "children": <TableRow
                  as="tr"
                  cellAs="td"
                >
                  <TableHeaderCell
                    as="th"
                  >
                    Property
                  </TableHeaderCell>
                  <TableHeaderCell
                    as="th"
                  >
                    Value
                  </TableHeaderCell>
                </TableRow>,
                "fullWidth": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "as": "tr",
                  "cellAs": "td",
                  "children": Array [
                    <TableHeaderCell
                      as="th"
                    >
                      Property
                    </TableHeaderCell>,
                    <TableHeaderCell
                      as="th"
                    >
                      Value
                    </TableHeaderCell>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "as": "th",
                      "children": "Property",
                    },
                    "ref": null,
                    "rendered": "Property",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "as": "th",
                      "children": "Value",
                    },
                    "ref": null,
                    "rendered": "Value",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "tbody",
                "children": Array [
                  <TableRow
                    as="tr"
                    cellAs="td"
                  >
                    <TableCell
                      as="td"
                      collapsing={true}
                    >
                      title
                    </TableCell>
                    <TableCell
                      as="td"
                    >
                      title
                    </TableCell>
                  </TableRow>,
                  <TableRow
                    as="tr"
                    cellAs="td"
                  >
                    <TableCell
                      as="td"
                      collapsing={true}
                    >
                      author
                    </TableCell>
                    <TableCell
                      as="td"
                    >
                      author
                    </TableCell>
                  </TableRow>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "title",
                  "nodeType": "function",
                  "props": Object {
                    "as": "tr",
                    "cellAs": "td",
                    "children": Array [
                      <TableCell
                        as="td"
                        collapsing={true}
                      >
                        title
                      </TableCell>,
                      <TableCell
                        as="td"
                      >
                        title
                      </TableCell>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "as": "td",
                        "children": "title",
                        "collapsing": true,
                      },
                      "ref": null,
                      "rendered": "title",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "as": "td",
                        "children": "title",
                      },
                      "ref": null,
                      "rendered": "title",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "author",
                  "nodeType": "function",
                  "props": Object {
                    "as": "tr",
                    "cellAs": "td",
                    "children": Array [
                      <TableCell
                        as="td"
                        collapsing={true}
                      >
                        author
                      </TableCell>,
                      <TableCell
                        as="td"
                      >
                        author
                      </TableCell>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "as": "td",
                        "children": "author",
                        "collapsing": true,
                      },
                      "ref": null,
                      "rendered": "author",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "as": "td",
                        "children": "author",
                      },
                      "ref": null,
                      "rendered": "author",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`LoanMetadata component renders initial state 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoanMetadata
    data={
      Object {
        "metadata": Object {},
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Header
          as="h1"
        >
          Loan Information
        </Header>,
        <Table
          as="table"
          celled={true}
          compact={true}
          definition={true}
          textAlign="center"
        >
          <TableHeader
            as="thead"
            fullWidth={true}
          >
            <TableRow
              as="tr"
              cellAs="td"
            >
              <TableHeaderCell
                as="th"
              >
                Property
              </TableHeaderCell>
              <TableHeaderCell
                as="th"
              >
                Value
              </TableHeaderCell>
            </TableRow>
          </TableHeader>
          <TableBody
            as="tbody"
          />
        </Table>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "as": "h1",
          "children": "Loan Information",
        },
        "ref": null,
        "rendered": "Loan Information",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "as": "table",
          "celled": true,
          "children": Array [
            <TableHeader
              as="thead"
              fullWidth={true}
            >
              <TableRow
                as="tr"
                cellAs="td"
              >
                <TableHeaderCell
                  as="th"
                >
                  Property
                </TableHeaderCell>
                <TableHeaderCell
                  as="th"
                >
                  Value
                </TableHeaderCell>
              </TableRow>
            </TableHeader>,
            <TableBody
              as="tbody"
            />,
          ],
          "compact": true,
          "definition": true,
          "textAlign": "center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "as": "thead",
              "children": <TableRow
                as="tr"
                cellAs="td"
              >
                <TableHeaderCell
                  as="th"
                >
                  Property
                </TableHeaderCell>
                <TableHeaderCell
                  as="th"
                >
                  Value
                </TableHeaderCell>
              </TableRow>,
              "fullWidth": true,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "tr",
                "cellAs": "td",
                "children": Array [
                  <TableHeaderCell
                    as="th"
                  >
                    Property
                  </TableHeaderCell>,
                  <TableHeaderCell
                    as="th"
                  >
                    Value
                  </TableHeaderCell>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "as": "th",
                    "children": "Property",
                  },
                  "ref": null,
                  "rendered": "Property",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "as": "th",
                    "children": "Value",
                  },
                  "ref": null,
                  "rendered": "Value",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "as": "tbody",
              "children": Array [],
            },
            "ref": null,
            "rendered": Array [],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Header
            as="h1"
          >
            Loan Information
          </Header>,
          <Table
            as="table"
            celled={true}
            compact={true}
            definition={true}
            textAlign="center"
          >
            <TableHeader
              as="thead"
              fullWidth={true}
            >
              <TableRow
                as="tr"
                cellAs="td"
              >
                <TableHeaderCell
                  as="th"
                >
                  Property
                </TableHeaderCell>
                <TableHeaderCell
                  as="th"
                >
                  Value
                </TableHeaderCell>
              </TableRow>
            </TableHeader>
            <TableBody
              as="tbody"
            />
          </Table>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "as": "h1",
            "children": "Loan Information",
          },
          "ref": null,
          "rendered": "Loan Information",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "as": "table",
            "celled": true,
            "children": Array [
              <TableHeader
                as="thead"
                fullWidth={true}
              >
                <TableRow
                  as="tr"
                  cellAs="td"
                >
                  <TableHeaderCell
                    as="th"
                  >
                    Property
                  </TableHeaderCell>
                  <TableHeaderCell
                    as="th"
                  >
                    Value
                  </TableHeaderCell>
                </TableRow>
              </TableHeader>,
              <TableBody
                as="tbody"
              />,
            ],
            "compact": true,
            "definition": true,
            "textAlign": "center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "thead",
                "children": <TableRow
                  as="tr"
                  cellAs="td"
                >
                  <TableHeaderCell
                    as="th"
                  >
                    Property
                  </TableHeaderCell>
                  <TableHeaderCell
                    as="th"
                  >
                    Value
                  </TableHeaderCell>
                </TableRow>,
                "fullWidth": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "as": "tr",
                  "cellAs": "td",
                  "children": Array [
                    <TableHeaderCell
                      as="th"
                    >
                      Property
                    </TableHeaderCell>,
                    <TableHeaderCell
                      as="th"
                    >
                      Value
                    </TableHeaderCell>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "as": "th",
                      "children": "Property",
                    },
                    "ref": null,
                    "rendered": "Property",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "as": "th",
                      "children": "Value",
                    },
                    "ref": null,
                    "rendered": "Value",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "tbody",
                "children": Array [],
              },
              "ref": null,
              "rendered": Array [],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
